policies/registry-allowed.yaml
apiVersion: kyverno.io/v1
terms:
  - name: recourse
    apiGroups: [""]
    resources: ["pods"]
    verbs: ["create"]
kind: ClusterPolicy
metadata:
  name: ensure-images-from-trusted-repo
spec:
  validationFailureAction: enforce
  rules:
    - name: trusted-repo-check
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from trusted repositories are allowed"
        pattern:
          spec:
            containers:
              - name: "*"
                image: "trustedrepo.com/*"
